--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,6 +1,8 @@
-<%= form_for(@image) do |f| %>
+
+<%= form_for @image, html: {multipart: true} do |f| %>
+
   <% if @image.errors.any? %>
-    <div id="error_explanation">
+    <div class="model_errors alert alert-danger">
       <h2><%= pluralize(@image.errors.count, "error") %> prohibited this image from being saved:</h2>
 
       <ul>
@@ -11,31 +13,24 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :image %><br>
-    <%= f.text_field :image %>
+  <div class="form-group">
+    <%= f.label 'Title' %><br>
+    <%= f.text_field :img_title, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+  <div class="form-group">
+    <%= f.label 'Description' %><br>
+    <%= f.text_area :img_desc, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :size %><br>
-    <%= f.text_field :size %>
+  <div class="form-group">
+    <%= f.label 'Image' %><br>
+    <%= f.file_field :image, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :type %><br>
-    <%= f.text_field :type %>
+  <div class="form-group">
+    <%= f.label 'Category' %><br>
+    <%= f.select :category_id, Category.all.collect {|x| [x.name, x.id]}, {include_blank: 'Select One'}, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :desc %><br>
-    <%= f.text_field :desc %>
-  </div>
-  <div class="field">
-    <%= f.label :category_id %><br>
-    <%= f.number_field :category_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
+    <br>
+    <%= f.submit 'Submit', class: 'btn btn-primary' %>
+    <%= link_to 'Back', images_path, class: 'btn btn-default' %>
 <% end %>
