--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,37 +1,26 @@
-<p id="notice"><%= notice %></p>
+<div id="gallery">
+  <h2>All Images</h2>
 
-<h1>Listing Images</h1>
+  <% if @images.any? %>
+      <% @images.each_slice 4 do |images_slice| %>
+          <div class="row">
+            <% images_slice.each do |image| %>
+                <div class="col-md-3">
+                  <div class="photo photo-type-line">
+                    <a href="<%= image.image_url %>" class="photo-hover" data-lightbox="my-images" data-title="<%= image.img_title %>">
+                      <div class="photo-info">
+                        <div class="headline"><%= image.img_title %></div>
+                        <div class="line"></div>
+                        <div class="desc"><%= image.img_desc %></div>
+                      </div>
+                      <div class="mask"></div>
+                    </a>
+                    <div class="photo-img"><%= image_tag image.image_url %></div>
+                  </div>
+                </div>
+            <% end %>
+          </div>
+      <% end %>
+  <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Title</th>
-      <th>Size</th>
-      <th>Type</th>
-      <th>Desc</th>
-      <th>Category</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @images.each do |image| %>
-      <tr>
-        <td><%= image.image %></td>
-        <td><%= image.title %></td>
-        <td><%= image.size %></td>
-        <td><%= image.type %></td>
-        <td><%= image.desc %></td>
-        <td><%= image.category_id %></td>
-        <td><%= link_to 'Show', image %></td>
-        <td><%= link_to 'Edit', edit_image_path(image) %></td>
-        <td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Image', new_image_path %>
+</div>
