--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,28 +1,27 @@
-<p id="notice"><%= notice %></p>
 
 <p>
   <strong>Image:</strong>
-  <%= @image.image %>
+  <%= @image.image_url %>
 </p>
 
 <p>
   <strong>Title:</strong>
-  <%= @image.title %>
+  <%= @image.img_title %>
 </p>
 
 <p>
   <strong>Size:</strong>
-  <%= @image.size %>
+  <%= @image.img_size %>
 </p>
 
 <p>
   <strong>Type:</strong>
-  <%= @image.type %>
+  <%= @image.img_type %>
 </p>
 
 <p>
   <strong>Desc:</strong>
-  <%= @image.desc %>
+  <%= @image.img_desc %>
 </p>
 
 <p>
@@ -30,5 +29,5 @@
   <%= @image.category_id %>
 </p>
 
-<%= link_to 'Edit', edit_image_path(@image) %> |
 <%= link_to 'Back', images_path %>
+<%= link_to 'Edit', edit_image_path %>
