--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,50 @@
 </head>
 <body>
 
-<%= yield %>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to 'rGallery', root_path, class: 'navbar-brand' %>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <% @categories4nav.each do |category| %>
+            <li><%= link_to category.name, category_path(category) %></li>
+        <% end %>
+      </ul>
+      <ul class="nav navbar-nav pull-right">
+        <li><%= link_to 'Upload Photo', new_image_path %></li>
+        <li><%= link_to 'Add Category', new_category_path %></li>
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
+
+<section>
+  <div class="container">
+
+    <!-- Alerts & Messages -->
+    <% if flash[:notice] %>
+        <div class="alert alert-success"><%= flash[:notice] %></div>
+    <% elsif flash[:alert] %>
+        <div class="alert alert-danger"><%= flash[:alert] %></div>
+    <% end %>
+
+    <%= yield %>
+
+  </div><!-- /.container -->
+</section>
+
+
+<footer>
+  <p>Copyright &copy; 2060, Shibabu</p>
+</footer>
 
 </body>
 </html>
