--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,6 @@
 body {
   font-family: 'Georgia', 'Arial', sans-serif;
-  margin-top: 45px;
+  margin-top: 40px;
 }
 
 .navbar {min-height: 38px; margin-bottom: 20px !important; border-radius: 0;}
@@ -107,4 +107,20 @@ footer {
 .photo-img {
   background: #7A548F;
   z-index: 0;
+}
+
+.edit-images img {
+  width: 100%;
+  height: 160px;
+  margin-bottom: 10px;
+  padding: 0;
+}
+
+.edit-images .col-md-2 {
+  padding: 0 8px 8px 0;
+}
+
+.edit-images .btn {
+  width: 45%;
+  margin-left: 5px;
 }
