--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,6 @@
 
 <div id="gallery">
-  <h2><%= @category.name %></h2>
+  <h2><%= @category.name %><%= link_to 'Edit Category', edit_category_path(@category), class: 'btn btn-primary pull-right' %></h2>
 
   <% if @images.any? %>
       <% @images.each_slice 4 do |images_slice| %>
@@ -25,6 +25,3 @@
   <% end %>
 
 </div>
-
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
